--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <script src="./dist/index.js"></script>
+    <script type="module" src="./dist/index.js" defer></script>
+    
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -81,7 +82,8 @@
                 </p>
                 <p class="fs-5">Que tal começar cadastrando uma nova tarefa?</p>
                 <a
-                  href="./public/tarefas/tarefa.list.html"
+                  id="btnCadastro"
+                  href="#"
                   class="btn btn-lg btn-primary"
                   >Cadastro de tarefas</a
                 >
