implementação do crud de tarefas concluído

--- a/public/tarefas/tarefa.create.html
+++ b/public/tarefas/tarefa.create.html
@@ -115,7 +115,7 @@
                   <div class="form-check">
                     <input
                       class="form-check-input"
-                      value="Media"
+                      value="Média"
                       name="flexRadioDefault"
                       id="flexRadioDefault2"
                       type="radio"
